// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResultRouterForm should a fielded operand if configured 1`] = `
Array [
  Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [],
      "exits": Array [
        Object {
          "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
        },
      ],
      "router": Object {
        "cases": Array [],
        "categories": Array [
          Object {
            "exit_uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
            "name": "All Responses",
            "uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
          },
        ],
        "default_category_uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
        "operand": "@(field(results.my_test_result, 0, \\"+\\"))",
        "type": "switch",
      },
      "uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
    },
    "ui": Object {
      "config": Object {
        "cases": Object {},
        "delimiter": "+",
        "index": 0,
        "operand": Object {
          "id": "my_test_result",
          "name": "My Test Result",
          "type": "result",
        },
      },
      "position": null,
      "type": "split_by_run_result_delimited",
    },
  },
]
`;

exports[`ResultRouterForm should create the right operand on save 1`] = `
Array [
  Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [],
      "exits": Array [
        Object {
          "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
        },
      ],
      "router": Object {
        "cases": Array [],
        "categories": Array [
          Object {
            "exit_uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
            "name": "All Responses",
            "uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
          },
        ],
        "default_category_uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
        "operand": "@results.my_test_result",
        "type": "switch",
      },
      "uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
    },
    "ui": Object {
      "config": Object {
        "cases": Object {},
        "operand": Object {
          "id": "my_test_result",
          "name": "My Test Result",
          "type": "result",
        },
      },
      "position": null,
      "type": "split_by_run_result",
    },
  },
]
`;

exports[`ResultRouterForm should render 1`] = `
<body>
  <div>
    <div
      class="dialog"
    >
      <div
        class="tabs"
      >
        <div
          class="tab "
        >
          Advanced
           
        </div>
      </div>
      <div
        class="header split_by_run_result"
      >
        <div
          class="title_container"
        >
          <div
            class="title"
          >
            Split by Flow Result
          </div>
          <div
            class="subtitle"
          />
        </div>
      </div>
      <div
        class="content"
      >
        <div
          class=" type_list"
        >
          <p>
            When a contact arrives at this point in your flow...
          </p>
          <div>
            <div
              class="normal "
            >
              <temba-select
                data-testid="temba_select_type"
                errors="[]"
                expressions=""
                name="type"
                namekey="description"
                searchable="true"
                valuekey="type"
                values="[{\\"type\\":\\"split_by_run_result\\",\\"aliases\\":[\\"split_by_run_result_delimited\\"],\\"name\\":\\"Split by Flow Result\\",\\"description\\":\\"Split by a result in the flow\\",\\"localizeableKeys\\":[\\"exits\\",\\"cases\\"]}]"
              />
            </div>
          </div>
        </div>
        <div
          class="non_delimited"
        >
          <div
            class="lead_in"
          >
            If the flow result
          </div>
          <div
            class="result_select"
          >
            <div
              class="ele"
            >
              <div
                class="small "
              >
                <temba-select
                  cachekey="0"
                  data-testid="temba_select_flow_result"
                  errors="[]"
                  expressions=""
                  name="Flow Result"
                  namekey="name"
                  placeholder="Select Result"
                  valuekey="uuid"
                  values="[]"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="case_list_container "
          tabindex="0"
        >
          <div
            class="case_list"
          >
            <div
              class="kase case_list_case"
            >
              <div
                class="ele group"
              >
                <div
                  class="kase has_any_word"
                  data-draggable="true"
                >
                  <span
                    class="fe-chevrons-expand dnd_icon"
                    data-draggable="true"
                  />
                  <div
                    class="choice"
                  >
                    <div
                      class="small "
                    >
                      <temba-select
                        data-testid="temba_select_operator"
                        errors="[]"
                        expressions=""
                        name="operator"
                        namekey="verboseName"
                        valuekey="type"
                        values="[{\\"type\\":\\"has_any_word\\",\\"verboseName\\":\\"has any of the words\\",\\"operands\\":1}]"
                      />
                    </div>
                  </div>
                  <div
                    class="single_operand"
                  >
                    <div
                      class="ele"
                    >
                      <div
                        class="wrapper small"
                      >
                        <input
                          data-testid="arguments"
                          name="arguments"
                          placeholder=""
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="categorize_as"
                    data-draggable="true"
                  >
                    categorize as
                  </div>
                  <div
                    class="category"
                  >
                    <div
                      class="ele"
                    >
                      <div
                        class="wrapper small"
                      >
                        <input
                          data-testid="Exit Name"
                          name="Exit Name"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                  <span
                    class="fe-x remove_icon"
                    data-testid="remove-case-b1f332f3-bdd3-4891-aec5-1843a712dbf1"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="optional_text_input"
        >
          <span
            class="toggle_link"
            data-spec="toggle-link"
            data-testid="toggle-link"
          >
            Save as..
          </span>
        </div>
      </div>
      <div
        class="footer"
      >
        <div
          class="buttons"
        >
          <div
            class="right_buttons"
          >
            <div
              class="btn secondary  "
              style="margin-left: 0px; margin-top: 0px;"
            >
              Cancel
            </div>
            <div
              class="btn primary  "
              style="margin-left: 10px; margin-top: 0px;"
            >
              Ok
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ResultRouterForm should show delimit options 1`] = `
<body>
  <div>
    <div
      class="dialog"
    >
      <div
        class="tabs"
      >
        <div
          class="tab "
        >
          Advanced
           
          <span
            class="tab_icon fe-check"
          />
        </div>
      </div>
      <div
        class="header split_by_run_result"
      >
        <div
          class="title_container"
        >
          <div
            class="title"
          >
            Split by Flow Result
          </div>
          <div
            class="subtitle"
          />
        </div>
      </div>
      <div
        class="content"
      >
        <div
          class=" type_list"
        >
          <p>
            When a contact arrives at this point in your flow...
          </p>
          <div>
            <div
              class="normal "
            >
              <temba-select
                data-testid="temba_select_type"
                errors="[]"
                expressions=""
                name="type"
                namekey="description"
                searchable="true"
                valuekey="type"
                values="[{\\"type\\":\\"split_by_run_result\\",\\"aliases\\":[\\"split_by_run_result_delimited\\"],\\"name\\":\\"Split by Flow Result\\",\\"description\\":\\"Split by a result in the flow\\",\\"localizeableKeys\\":[\\"exits\\",\\"cases\\"]}]"
              />
            </div>
          </div>
        </div>
        <div
          class="delimited"
        >
          <div
            class="lead_in"
          >
            If the
          </div>
          <div
            class="field_number"
          >
            <div
              class="ele"
            >
              <div
                class="small "
              >
                <temba-select
                  data-testid="temba_select_field_number"
                  errors="[]"
                  expressions=""
                  name="Field Number"
                  namekey="name"
                  valuekey="value"
                  values="[{\\"value\\":\\"1\\",\\"name\\":\\"second\\"}]"
                />
              </div>
            </div>
          </div>
          <div
            class="lead_in_sub"
          >
            field of
          </div>
          <div
            class="result_select_delimited"
          >
            <div
              class="ele"
            >
              <div
                class="small "
              >
                <temba-select
                  cachekey="0"
                  data-testid="temba_select_flow_result"
                  errors="[]"
                  expressions=""
                  name="Flow Result"
                  namekey="name"
                  placeholder="Select Result"
                  valuekey="uuid"
                  values="[]"
                />
              </div>
            </div>
          </div>
          <div
            class="lead_in_sub"
          >
            delimited by
          </div>
          <div
            class="delimiter"
          >
            <div
              class="ele"
            >
              <div
                class="small "
              >
                <temba-select
                  data-testid="temba_select_delimiter"
                  errors="[]"
                  expressions=""
                  name="Delimiter"
                  namekey="name"
                  valuekey="value"
                  values="[{\\"value\\":\\" \\",\\"name\\":\\"spaces\\"}]"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="case_list_container "
          tabindex="0"
        >
          <div
            class="case_list"
          >
            <div
              class="kase case_list_case"
            >
              <div
                class="ele group"
              >
                <div
                  class="kase has_any_word"
                  data-draggable="true"
                >
                  <span
                    class="fe-chevrons-expand dnd_icon"
                    data-draggable="true"
                  />
                  <div
                    class="choice"
                  >
                    <div
                      class="small "
                    >
                      <temba-select
                        data-testid="temba_select_operator"
                        errors="[]"
                        expressions=""
                        name="operator"
                        namekey="verboseName"
                        valuekey="type"
                        values="[{\\"type\\":\\"has_any_word\\",\\"verboseName\\":\\"has any of the words\\",\\"operands\\":1}]"
                      />
                    </div>
                  </div>
                  <div
                    class="single_operand"
                  >
                    <div
                      class="ele"
                    >
                      <div
                        class="wrapper small"
                      >
                        <input
                          data-testid="arguments"
                          name="arguments"
                          placeholder=""
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="categorize_as"
                    data-draggable="true"
                  >
                    categorize as
                  </div>
                  <div
                    class="category"
                  >
                    <div
                      class="ele"
                    >
                      <div
                        class="wrapper small"
                      >
                        <input
                          data-testid="Exit Name"
                          name="Exit Name"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                  <span
                    class="fe-x remove_icon"
                    data-testid="remove-case-061fc171-8b79-4636-b892-bd0ea5aa9b42"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="optional_text_input"
        >
          <span
            class="toggle_link"
            data-spec="toggle-link"
            data-testid="toggle-link"
          >
            Save as..
          </span>
        </div>
      </div>
      <div
        class="footer"
      >
        <div
          class="buttons"
        >
          <div
            class="right_buttons"
          >
            <div
              class="btn secondary  "
              style="margin-left: 0px; margin-top: 0px;"
            >
              Cancel
            </div>
            <div
              class="btn primary  "
              style="margin-left: 10px; margin-top: 0px;"
            >
              Ok
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
